WIP: Migrate users of String.format()
Change-Id: Ib7c29846507283280f7381e320b104e7ba83183a
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>