@@ -60,13 +60,14 @@ final class ShardManagerGetSnapshotReplyActor extends UntypedAbstractActor {
             params.replyToActor.tell(message, self());
             self().tell(PoisonPill.getInstance(), self());
         } else if (message instanceof ReceiveTimeout) {
-            LOG.warn("{}: Timed out after {} ms while waiting for snapshot replies from {} shard(s). "
-                + "{} shard(s) {} did not respond", params.id, params.receiveTimeout.toMillis(),
-                params.shardNames.size(), remainingShardNames.size(), remainingShardNames);
-            params.replyToActor.tell(new Failure(new TimeoutException(String.format(
-                "Timed out after %s ms while waiting for snapshot replies from %d shard(s). %d shard(s) %s "
-                + "did not respond.", params.receiveTimeout.toMillis(), params.shardNames.size(),
-                remainingShardNames.size(), remainingShardNames))), self());
+            LOG.warn("""
+                {}: Timed out after {} ms while waiting for snapshot replies from {} shard(s). {} shard(s) {} did not \
+                respond""", params.id, params.receiveTimeout.toMillis(), params.shardNames.size(),
+                remainingShardNames.size(), remainingShardNames);
+            params.replyToActor.tell(new Failure(new TimeoutException("""
+                Timed out after %s ms while waiting for snapshot replies from %d shard(s). %d shard(s) %s did not \
+                respond.""".formatted(params.receiveTimeout.toMillis(), params.shardNames.size(),
+                    remainingShardNames.size(), remainingShardNames))), self());
             self().tell(PoisonPill.getInstance(), self());
         }
     }
